--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ header {
 h1 {
   position: static;
   width: 327px;
-  height: 150px;
   left: 24px;
   top: 114px;
 
@@ -600,8 +599,10 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 30px 0 30px;
+  margin: 30px;
   padding-top: 50px;
+  margin-bottom: 0;
+  margin-block-end: 0;
 }
 
 .contact-heading {
@@ -610,6 +611,7 @@ h2 {
   font-family: "poppins", sans-serif;
   color: white;
   margin-bottom: 5px;
+  margin-left: 75px;
 }
 
 .message-contact {
@@ -620,13 +622,14 @@ h2 {
   font-size: 20px;
   color: #ebebff;
   text-align: center;
+  margin-block-end: 0;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 18px auto;
+  margin: 0 auto;
   width: 327px;
 }
 
