--- a/style.css
+++ b/style.css
@@ -893,5 +893,95 @@ h2 {
     height: 48px;
     margin-top: 40px;
   }
-  
+
+  /* ----------- About Myself ----------- */
+  .about_myself {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    position: absolute;
+    top: 3611px;
+  }
+
+  .top {
+    padding-top: 0;
+    display: flex;
+    justify-content: flex-start;
+    width: 40%;
+    height: 20%;
+    margin: 142px;
+    padding-left: 0;
+    margin-right: 0;
+  }
+
+  .top p {
+    height: 50%;
+  }
+
+  .contacts_about_my_self {
+    display: flex;
+    justify-self: flex-start;
+  }
+
+  .resume_btn {
+    /* Auto Layout */
+
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    padding: 12px;
+    position: static;
+    width: 162px;
+    height: 48px;
+    margin-top: 0;
+  }
+
+  .skill_div {
+    width: 100%;
+    padding-left: 20px;
+  }
+
+  .skills {
+    display: flex;
+    margin-right: 0;
+    align-items: flex-start;
+    position: static;
+    padding-left: 0;
+    width: 100%;
+    margin-top: 142px;
+  }
+
+  .skills li {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .skills .no_bullet {
+    display: flex;
+    flex-direction: row;
+    top: 72px;
+    left: 0;
+  }
+
+  .skill_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    height: 70%;
+    padding: 20px;
+    margin: 12px;
+    margin-left: 0;
+    left: 0;
+  }
+
+  .accordion {
+    width: 80%;
+    padding-left: 0;
+    margin-left: 0;
+    left: 0;
+  }
 }
